--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-toggle-button": "^2.2.0",
     "reactstrap": "^6.4.0"
   },
   "scripts": {
